fixed z-indexing for tooltip purposes

--- a/css/custom-hotbar.css
+++ b/css/custom-hotbar.css
@@ -1,7 +1,7 @@
 /*Global styles*/
 
 #custom-hotbar {
-    z-index: 69;
+    z-index: 70;
     position: fixed;
     bottom: 63px;
     left: 220px;
@@ -139,6 +139,12 @@ pointer-events: all;
 #custom-hotbar-directory-controls {
     max-height: 100%
 }
+
+.macro .tooltip {
+    z-index:4;
+}
+
+
 
 /* disable page controls for now */
 #custom-hotbar-page-controls {
